infra/vpc.tf
resource "aws_vpc" "main" {
    cidr_block = var.vpc_cidr
    enable_dns_support = true
    enable_dns_hostnames = true
    tags = merge(local.tags, { Name = "${var.project_name}-vpc" })
}


resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id
    tags = merge(local.tags, { Name = "${var.project_name}-igw" })
}


resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.public_subnet_cidr
    availability_zone = var.availability_zone
    map_public_ip_on_launch = true
    tags = merge(local.tags, { Name = "${var.project_name}-public-subnet" })
}


resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    tags = merge(local.tags, { Name = "${var.project_name}-public-rt" })
}


resource "aws_route" "public_inet" {
    route_table_id = aws_route_table.public.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
}


resource "aws_route_table_association" "public_assoc" {
    subnet_id = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
}
