infra/security_groups.tf
resource "aws_security_group" "web_ssh" {
    name = "${var.project_name}-sg"
    description = "Allow SSH and HTTP"
    vpc_id = aws_vpc.main.id


ingress {
    description = "SSH"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [var.allowed_ssh_cidr]
}


ingress {
    description = "HTTP"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}


egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}


tags = merge(local.tags, { Name = "${var.project_name}-sg" })
}
